# SeSAC

#2 CS with AI - (3)/day17_upstage-network-lecture/: main.py  pyproject.toml
#2 CS with AI - (3)/day17_upstage-network-lecture/.github/ISSUE_TEMPLATE/: lecture_sample.yml
#2 CS with AI - (3)/day17_upstage-network-lecture/.github/workflows/: deploy-ec2.yml  deploy-release.yml
#2 CS with AI - (3)/day17_upstage-network-lecture/app/: exceptions.py
#2 CS with AI - (3)/day17_upstage-network-lecture/app/api/route/: user_routers.py
#2 CS with AI - (3)/day17_upstage-network-lecture/app/repository/: user_repo.py
#2 CS with AI - (3)/day17_upstage-network-lecture/app/service/: user_service.py
#3 AI Product Engineering (3)/day31-40_medical-develop/: .gitignore
#4 AI Backend Engineering (1)/day41-45_starter-code/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
#4 AI Backend Engineering (1)/day41-45_starter-code/.github/workflows/: cd.yml  ci.yml
#4 AI Backend Engineering (1)/day41-45_starter-code/app/: __init__.py  main copy.py  main.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/api/: __init__.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/api/routes/: __init__.py  chat.py  health.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/core/: __init__.py  config.py  prompts.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/repositories/: __init__.py  fan_letter.py  rag.py  schedule.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/schemas/: chat copy.py  chat.py
#4 AI Backend Engineering (1)/day41-45_starter-code/app/tools/: __init__.py  executor.py
#4 AI Backend Engineering (1)/day41-45_starter-code/data/scripts/: ingest_data.py  ingest_rag.py
#4 AI Backend Engineering (1)/day41-45_starter-code/tests/: __init__.py
.github/workflows/: ci.yml
